--- a/asio/src/doc/reference.dox
+++ b/asio/src/doc/reference.dox
@@ -201,7 +201,7 @@ PREDEFINED             = GENERATING_DOCUMENTATION \
                          ASIO_MOVE_ARG(a)=a&& \
                          ASIO_NONDEDUCED_MOVE_ARG(a)=a& \
                          ASIO_DECL= \
-                         ASIO_CONSTEXPR=constexpr \
+                         constexpr=constexpr \
                          ASIO_NODISCARD= \
                          ASIO_COMPLETION_SIGNATURE=typename \
                          ASIO_COMPLETION_HANDLER_FOR(s)=typename \
