Switch to С++20: cleanup C++11 macro (ASIO_ALIGNOF, ASIO_AUTO_RETURN_TYPE_PREFIX, ASIO_AUTO_RETURN_TYPE_PREFIX2, ASIO_AUTO_RETURN_TYPE_PREFIX3, ASIO_AUTO_RETURN_TYPE_SUFFIX, ASIO_DELETED, ASIO_DISABLE_CXX11_MACROS, ASIO_ERROR_CATEGORY_NOEXCEPT, ASIO_HAS_ALIAS_TEMPLATES, ASIO_HAS_ALIGNOF, ASIO_HAS_CONSTEXPR, ASIO_HAS_CSTDINT, ASIO_HAS_CXX11_ALLOCATORS, ASIO_HAS_DECLTYPE, ASIO_HAS_DEFAULT_FUNCTION_TEMPLATE_ARGUMENTS, ASIO_HAS_ENUM_CLASS, ASIO_HAS_MOVE, ASIO_HAS_NOEXCEPT, ASIO_HAS_NULLPTR, ASIO_HAS_REF_QUALIFIED_FUNCTIONS, ASIO_HAS_STD_ADDRESSOF, ASIO_HAS_STD_ALIGN, ASIO_HAS_STD_ALLOCATOR_ARG, ASIO_HAS_STD_ARRAY, ASIO_HAS_STD_ATOMIC, ASIO_HAS_STD_CALL_ONCE, ASIO_HAS_STD_CHRONO, ASIO_HAS_STD_EXCEPTION_PTR, ASIO_HAS_STD_FUNCTION, ASIO_HAS_STD_FUTURE, ASIO_HAS_STD_HASH, ASIO_HAS_STD_IOSTREAM_MOVE, ASIO_HAS_STD_MUTEX_AND_CONDVAR, ASIO_HAS_STD_NESTED_EXCEPTION, ASIO_HAS_STD_REFERENCE_WRAPPER, ASIO_HAS_STD_SHARED_PTR, ASIO_HAS_STD_SYSTEM_ERROR, ASIO_HAS_STD_THREAD, ASIO_HAS_STD_TUPLE, ASIO_HAS_STD_TYPE_TRAITS, ASIO_HAS_USER_DEFINED_LITERALS, ASIO_HAS_VARIADIC_TEMPLATES, ASIO_LVALUE_REF_QUAL, ASIO_MOVE_ARG, ASIO_MOVE_ARG2, ASIO_MOVE_CAST, ASIO_MOVE_CAST2, ASIO_MOVE_OR_LVALUE, ASIO_MOVE_OR_LVALUE_ARG, ASIO_MOVE_OR_LVALUE_TYPE, ASIO_NOEXCEPT, ASIO_NOEXCEPT_IF, ASIO_NOEXCEPT_OR_NOTHROW, ASIO_NONDEDUCED_MOVE_ARG, ASIO_RVALUE_REF_QUAL, ASIO_STATIC_CONSTEXPR, ASIO_CONSTEXPR, ASIO_HAS_CHRONO).
Signed-off-by: Vladislav Shchapov <vladislav@shchapov.ru>

--- a/asio/src/doc/reference.dox
+++ b/asio/src/doc/reference.dox
@@ -310,12 +310,7 @@ PREDEFINED             = GENERATING_DOCUMENTATION \
                          ASIO_NETDB_ERROR(e)=implementation_defined \
                          ASIO_EOF_ERROR(e)=implementation_defined \
                          "ASIO_OS_ERROR(e1,e2)=implementation_defined" \
-                         ASIO_MOVE_ARG(a)=a&& \
-                         ASIO_MOVE_OR_LVALUE_ARG(a)=a&& \
-                         ASIO_NONDEDUCED_MOVE_ARG(a)=a& \
                          ASIO_DECL= \
-                         ASIO_CONSTEXPR=constexpr \
-                         ASIO_NOEXCEPT=noexcept \
                          ASIO_NODISCARD= \
                          ASIO_COMPLETION_SIGNATURE=typename \
                          ASIO_COMPLETION_HANDLER_FOR(s)=typename \
@@ -346,12 +341,7 @@ PREDEFINED             = GENERATING_DOCUMENTATION \
                          ASIO_UNSPECIFIED(e)=unspecified \
                          ASIO_EXECUTION_EXECUTOR=typename \
                          ASIO_EXECUTION_RECEIVER_ERROR_DEFAULT==std::exception_ptr \
-                         ASIO_EXECUTION_RECEIVER_OF_0=typename \
-                         ASIO_NOEXCEPT_IF(c)= \
-                         ASIO_AUTO_RETURN_TYPE_PREFIX(t)=auto \
-                         "ASIO_AUTO_RETURN_TYPE_PREFIX2(t0,t1)=auto" \
-                         "ASIO_AUTO_RETURN_TYPE_PREFIX3(t0,t1,t2)=auto" \
-                         ASIO_AUTO_RETURN_TYPE_SUFFIX(t)=
+                         ASIO_EXECUTION_RECEIVER_OF_0=typename
 EXPAND_AS_DEFINED      =
 SKIP_FUNCTION_MACROS   = YES
 #---------------------------------------------------------------------------
